# FAIRmaterials

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  fairmaterials-git-log.txt
.github/workflows/: ci.yaml  publish.yaml
FAIRSheetTemplates/: OfficialPackageFAIRSheetInput - NameSpace.csv  OfficialPackageFAIRSheetInput - OntologyInfo.csv  OfficialPackageFAIRSheetInput - RelationshipDefinitions.csv  OfficialPackageFAIRSheetInput - ValueTypeDefinitions.csv  OfficialPackageFAIRSheetInput - VariableDefinitions.csv  OfficialPackageFAIRSheetInput.xlsx  nameSpaceFAIRSheetInput.xlsx  ontologyInfoFAIRSheetInput.xlsx  relationshipDefinitionsFAIRSheetInput.xlsx  variableDefinitionsFAIRSheetInput.xlsx
JOSSpaper/: paper.bib  paper.html  paper.md
Python/FAIRmaterials/: .gitignore  LICENSE.txt  OfficialPackageFAIRSheetInput.xlsx  README.md  pyproject.toml  setup.py
Python/FAIRmaterials/FAIRmaterials/: __main__.py  fair_sheet_parser.py  rdflib_graph_merger.py  rdflib_graph_saver.py
Python/FAIRmaterials/FAIRmaterials.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Python/FAIRmaterials/myenv/: pyvenv.cfg
Python/FAIRmaterials/tests/: fair_sheet_parser_test.py  rdflib_graph_merger_test.py  rdflib_graph_saver_test.py
R/FAIRmaterials/: .RData  .Rhistory  DESCRIPTION  NAMESPACE  NEWS.Rmd  README.Rmd  README.md
R/FAIRmaterials/R/: extra_functions.R  process_ontology_files.R
R/FAIRmaterials/inst/extdata/PV/: PVFAIRSheetInput-OntologyInfo.csv  PVFAIRSheetInput-RelationshipDefinitions.csv  PVFAIRSheetInput-ValueTypeDefinitions.csv  ontology_data-output.ttl
R/FAIRmaterials/inst/extdata/XRay/: XRaySampleFAIRSheetInput-NameSpace.csv  XRaySampleFAIRSheetInput-OntologyInfo.csv  ontology_data-output.ttl
R/FAIRmaterials/man/: process_ontology_files.Rd
R/FAIRmaterials/tests/: testthat.R
R/FAIRmaterials/tests/testthat/: test-process_ontology_files.R
R/FAIRmaterials/vignettes/: FAIRmaterials.Rmd
worked-Example-PVModule/: PVFAIRSheetInput - NameSpace.csv
worked-Example-PVModule/PVModuleOntology_output/: PVModuleOntology.html  PVModuleOntology.json  PVModuleOntology.owl
worked-Example-PVModule/excel/: PVModuleFAIRSheetInput.xlsx
worked-Example-XRaySample/: XRD - NameSpace.csv  XRD - OntologyInfo.csv  XRD - ValueTypeDefinitions.csv  XRD - VariableDefinitions.csv  XRD-Sample - RelationshipDefinitions.csv  XRD-Sample.xlsx
worked-Example-XRaySample/excel/: XRD.xlsx
worked-Example-XRaySample/mds-XraySample_output/: mds-XraySample.html  mds-XraySample.json  mds-XraySample.ttl
workflows/: compile_paper.yml
