[tool.poetry]
name = "FAIRmaterials"
version = "0.4.2"
description = """
Translates several CSV files with ontological terms and corresponding
data into RDF triples. These RDF triples are stored in OWL and JSON-LD files,
facilitating data accessibility, interoperability, and knowledge unification.
The triples are also visualized in a graph saved as an SVG. The input CSVs
must be formatted with a template from a public Google Sheet; see README or
vignette for more information. This is a tool is used by the SDLE Research
Center at Case Western Reserve University to create and visualize material
science ontologies, and it includes example ontologies to demonstrate its
capabilities. This work was supported by the U.S. Department of Energy’s
Office of Energy Efficiency and Renewable Energy (EERE) under Solar Energy
Technologies Office (SETO) Agreement Numbers E-EE0009353 and DE-EE0009347,
Department of Energy (National Nuclear Security Administration) under Award
Number DE-NA0004104 and Contract number B647887, and U.S. National Science
Foundation Award under Award Number 2133576.
"""
authors = [
    "Alexander Harding Bradley",
    "Priyan Rajamohan",
    "Jonathan E. Gordon",
    "Nathaniel Hahn",
    "Kiefer Lin",
    "Arafath Nihar",
    "Hayden Cadwell",
    "Jiana Kambo",
    "Jayvic Jimenez",
    "Kristen J. Hernandez",
    "Hein Htet Aung",
    "Brian Giera",
    "Weiqi Yu",
    "Mohommad Redad Mehdi",
    "Finley Holt",
    "Quynh Tran",
    "Gabriel Ponon",
    "Dan Savage",
    "Don Brown",
    "Jarod Kaltenbaugh",
    "Kush Havinal",
    "Nicholas Gray",
    "Max Ligget",
    "Benjamin G. Pierce",
    "Raymond Wieser",
    "Yangxin Fan",
    "Tommy Ciardi",
    "Olatunde J. Akanbi",
    "Hadiza Iawal",
    "Will Oltjen",
    "Maliesha Kalutotage",
    "Antony Lino",
    "Van Tran",
    "Mingjian Lu",
    "Xuanji Yu",
    "Abhishek Daundkar",
    "Hope Omodolor",
    "Mirra Rasmussen",
    "Sameera Nalin-Venkat",
    "Tian Wang",
    "Rounak Chawla",
    "Liangyi Huang",
    "Zelin Li",
    "Leean Jo",
    "Jeffrey M. Yarus",
    "Mengjie Li",
    "Kristopher O. Davis",
    "Yinghui Wu",
    "Pawan K. Tripathi",
    "Laura S. Bruckman",
    "Erika I. Barcelos",
    "Roger H. French <rxf131@case.edu>"
]
readme = "README.md"
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9.18"
rdflib = "^7.0.0"
pylode = "^3.1.4"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
FAIRMaterials = "FAIRmaterials.main:main"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pytest.ini_options]
pythonpath = ["."]